--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
+    "@capacitor/haptics": "6.0.0",
+    "@capacitor/keyboard": "6.0.0",
+    "@capacitor/status-bar": "6.0.0",
     "@ionic/react": "^7.8.6",
     "@ionic/react-router": "^7.8.6",
     "@testing-library/jest-dom": "^5.11.9",
@@ -16,9 +20,11 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "bootstrap": "^5.1.3",
     "history": "^4.9.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0-beta.1",
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.4",
@@ -30,7 +36,6 @@
     "workbox-cacheable-response": "^5.1.4",
     "workbox-core": "^5.1.4",
     "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
     "workbox-navigation-preload": "^5.1.4",
     "workbox-precaching": "^5.1.4",
     "workbox-range-requests": "^5.1.4",
