--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^5.1.3",
+    "firebase": "^10.12.2",
     "history": "^4.9.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
